# clincian-ai

./: .env  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/: nice_ng97_sample.txt
scripts/: create_index.py  find_region.py  get_index_details.py  ingest_nice_guidelines.py  ingest_sample_data.py  list_indexes.py  test_brief_writer_agent.py  test_clinical_history_agent.py  test_gemini_key.py  test_intake_agent.py  test_planner_agent.py  test_profiler_agent.py  test_qa_agent.py  test_rag.py
src/aether/: main.py
src/aether/agents/: brief_writer.py  history.py  intake.py  planner.py  profiler.py  qa.py
src/aether/config/: llm_config.py  settings.py
src/aether/orchestrator/: context_store.py  crew.py
src/aether/schemas/: clinical.py
src/aether/tools/: pinecone_utils.py  rag_tool.py
src/aether/utils/: logger.py
