[tool.poetry]
name = "aether-agents"
version = "1.0.0"
description = "AETHER Multi-Agent Clinical Assessment Module"
authors = ["AETHER Team <team@aether.health>"]
readme = "README.md"
packages = [{include = "aether", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
crewai = "^0.28.0"
crewai-tools = "^0.1.6"
anthropic = "^0.25.0"
langchain = "^0.1.20"
langchain-anthropic = "^0.1.11"
langchain-openai = "^0.1.7"
langchain-community = "^0.0.38"
langchain-pinecone = "^0.1.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"
python-dotenv = "^1.0.0"
pinecone-client = "^3.2.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
ruff = "^0.3.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"